fix button z-index

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -21,6 +21,7 @@ body{
 }
 a{
     text-decoration: none;
+    font-family: $font-stack;
 }
 
 // Custom Scrollbar
