--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -114,7 +114,6 @@
     font-weight: 600;
     font-size: 16px;
     border: 2px solid $second-color;
-    // background: transparent;
     background: $body-color;
     padding: .5em 1em;
     cursor: pointer;
@@ -122,7 +121,7 @@
     position: relative;
     outline: none;
     transition: 1.2s;
-    z-index: 99;
+    z-index: 2;
 }
 .btn-resume{
     background: transparent;
