--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,7 +64,7 @@ header{
         background: transparent;
         height: 20vh;
         padding: 0 3%;
-        z-index: 99;
+        z-index: 999;
         .logo{
             position: relative;
             transition: .6s;
